--- a/main.less
+++ b/main.less
@@ -1,5 +1,5 @@
 /*
- * Brackets port of Eclipse's RecognEyes theme
+ * Brackets port of Eclipse's Light theme
  *
  * Defines all the variables that one can configure in a theme. This should
  * contain all variables / mixins for UI styling that we want to be able to
